--- a/Lista1/10.html
+++ b/Lista1/10.html
@@ -19,9 +19,9 @@
 			Durante os três arcos da série aparece um teemo em cada arco!
 		</p>
 
-		<img src='../Img/teemo1.jpg'>
-		<img src='../Img/teemo2.jpg'>
-		<img src='../Img/teemo3.png'>
+		<img src='../src/Img/teemo1.jpg'>
+		<img src='../src/Img/teemo2.jpg'>
+		<img src='../src/Img/teemo3.png'>
 
 		<h2>Haikyuu!!!</h2>
 		<h3>Por que o Kenma tem o cabelo loiro?</h3>
@@ -30,7 +30,7 @@
 			Kenma tingiu o cabelo de loiro porque não queria se destacar :D
 		</p>
 
-		<img src='../Img/nekoma-kenma.gif'>
+		<img src='../src/Img/nekoma-kenma.gif'>
 
 	</body>
 
