--- a/Lista1/3.html
+++ b/Lista1/3.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<h2>Matrix</h2>		
-		<img src="../Img/Matrix.JPG" alt="Capa do Matrix">
+		<img src="../src/Img/Matrix.JPG" alt="Capa do Matrix">
 		<p>
 			Após enfrentar os sentinelas no mundo real, Neo, a maior esperança da humanidade, está preso entre a Matrix e a realidade. 
 			A maioria da população do planeta permanece em um estado de suspensão da realidade virtual. Os poucos humanos que estão 
@@ -18,7 +18,7 @@
 		</p>
 
 		<h2>Interestelar</h2>
-		<img src="../Img/Interestelar.JPG" alt="Capa Interestelar">
+		<img src="../src/Img/Interestelar.JPG" alt="Capa Interestelar">
 		<p>
 			As reservas naturais da Terra estão chegando ao fim e um grupo de astronautas recebe a missão de verificar possíveis 
 			planetas para receberem a população mundial, possibilitando a continuação da espécie. 
@@ -27,7 +27,7 @@
 		</p>
 
 		<h2>Kung Fu Panda</h2>
-		<img src="../Img/KungFuPanda.jpg" alt="Capa Kung Fu Panda">
+		<img src="../src/Img/KungFuPanda.jpg" alt="Capa Kung Fu Panda">
 		<p>
 			Po é um panda que trabalha na loja de macarrão da sua família e sonha em transformar-se em um mestre de kung fu. 
 			Seu sonho se torna realidade quando, inesperadamente, ele deve cumprir uma profecia antiga e estudar a arte 
