--- a/Lista1/7.html
+++ b/Lista1/7.html
@@ -111,7 +111,7 @@
 			Who's caught on the cross
 		</p>
 
-		<img src='../Img/stephen.jpg'>
+		<img src='../src/Img/stephen.jpg'>
 
 	</body>
 </html>
