--- a/Lista2/3.html
+++ b/Lista2/3.html
@@ -26,7 +26,7 @@
             <a href='https://you-zitsu.fandom.com/wiki/Kei_Karuizawa'>Kei Karuizawa</a>.
         </p>
 
-        <img src="../Img/Ayanokoji.png">
+        <img src="../src/Img/Ayanokoji.png">
 
     </body>
 
