--- a/Lista2/4.html
+++ b/Lista2/4.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
     <head>
@@ -9,15 +9,15 @@
     <body>
 
         <a href="4-1.html">
-            <img src="../Img/Matrix.JPG">
+            <img src="../src/Img/Matrix.JPG">
         </a>
 
         <a href="4-2.html">
-            <img src="../Img/Interestelar.JPG">
+            <img src="../src/Img/Interestelar.JPG">
         </a>
 
         <a href="4-3.html">
-            <img src="../Img/KungFuPanda.jpg">
+            <img src="../src/Img/KungFuPanda.jpg">
         </a>
 
     </body>
