--- a/Lista2/5-pokemon/Bulbassauro.html
+++ b/Lista2/5-pokemon/Bulbassauro.html
@@ -10,7 +10,7 @@
 
         <h2>Bulbassauro</h2>
 
-        <img src="../../Img/bulbassauro.png">
+        <img src="../../src/Img/bulbassauro.png">
 
     </body>
 
