--- a/Lista2/6.html
+++ b/Lista2/6.html
@@ -9,15 +9,15 @@
     <body>
 
         <a href="https://www.youtube.com">
-            <img src="../Img/youtube.png">
+            <img src="../src/Img/youtube.png">
         </a>
 
         <a href="https://www.google.com">
-            <img src="../Img/google.png">
+            <img src="../src/Img/google.png">
         </a>
 
         <a href="https://neoxscans.net">
-            <img src="../Img/neox.png">
+            <img src="../src/Img/neox.png">
         </a>
 
     </body>
