--- a/Lista3/9.html
+++ b/Lista3/9.html
@@ -6,28 +6,28 @@
 
     <body>
 
-        <h1>Kingdom Hearts: Coletâneas da franquia chegam para Xbox One</h1>
+        <h1>Kingdom Hearts: Colet&acirc;neas da franquia chegam para Xbox One</h1>
 
-        <h2>Todos os jogos estão disponíveis no console</h2>
+        <h2>Todos os jogos est&atilde;o dispon&iacute;veis no console</h2>
 
         <p>
-            Conforme indicado por um vazamento da própria Microsoft 
+            Conforme indicado por um vazamento da pr&oacute;pria Microsoft 
             Store, Kingdom Hearts HD 1.5 + 2.5 ReMIX e Kingdom Hearts 
-            HD 2.8 Final Chapter Prologue foram lançados digitalmente 
-            para Xbox One nesta terça-feira (18).
+            HD 2.8 Final Chapter Prologue foram lan&ccedil;ados digitalmente 
+            para Xbox One nesta ter&ccedil;a-feira (18).
         </p>
 
         <p>
-            Esta é a primeira vez que estes jogos são disponibilizados 
-            para um console da Microsoft, sejam as versões 
-            remasterizadas ou originais. Até então, Kingdom Hearts 3 
-            era o único game da franquia disponível para um console 
+            Esta &eacute; a primeira vez que estes jogos s&atilde;o disponibilizados 
+            para um console da Microsoft, sejam as vers&otilde;es 
+            remasterizadas ou originais. At$eacute ent&atilde;o, Kingdom Hearts 3 
+            era o &uacute;nico game da franquia dispon&iacute;vel para um console 
             Xbox One.
         </p>
 
         <p>
-            A coleção Kingdom Hearts HD 1.5+2.5 ReMIX custa R$ 229,95 
-            e inclui o seguinte conteúdo:
+            A cole&ccedil;&atilde;o Kingdom Hearts HD 1.5+2.5 ReMIX custa R$ 229,95 
+            e inclui o seguinte conte&uacute;do:
         </p>
 
         <ul>
@@ -49,10 +49,10 @@
             </li>
         </ul>
 
-        <img src="../Img/kingdom.png">
+        <img src="../src/Img/kingdom.png">
 
         <p>
-            Já Kingdom Hearts HD 2.8 Final Chapter Prologue sai 
+            J&aacute; Kingdom Hearts HD 2.8 Final Chapter Prologue sai 
             por R$ 249,95 e inclui:
         </p>
 
@@ -68,11 +68,11 @@
         </ul>
 
         <p>
-            Além disso, a Microsoft revelou que Kingdom Hearts 3 
-            chegará ao catálogo do Xbox Game Pass em breve. 
-            A expansão do jogo, Re Mind, chegou recentemente para 
-            PS4 e estará disponível no Xbox One em 25 de fevereiro 
-            -- confira o que achamos do conteúdo.
+            Al&eacute;m disso, a Microsoft revelou que Kingdom Hearts 3 
+            chegar&aacute; ao cat&aacute;logo do Xbox Game Pass em breve. 
+            A expans&atilde;o do jogo, Re Mind, chegou recentemente para 
+            PS4 e estar&aacute; disponível no Xbox One em 25 de fevereiro 
+            -- confira o que achamos do conte&uacute;do.
         </p>
 
         <p>
