--- a/index.html
+++ b/index.html
@@ -164,6 +164,31 @@
                     Exercício 10
                 </a>
             </li>
+            <li>
+                <a href="./Lista3/11.html">
+                    Exercício 11
+                </a>
+            </li>
+            <li>
+                <a href="./Lista3/12.html">
+                    Exercício 12
+                </a>
+            </li>
+            <li>
+                <a href="./Lista3/13.html">
+                    Exercício 13
+                </a>
+            </li>
+            <li>
+                <a href="./Lista3/14.html">
+                    Exercício 14
+                </a>
+            </li>
+            <li>
+                <a href="./Lista3/15.html">
+                    Exercício 15
+                </a>
+            </li>
         </ul>
     </body>
 
