Adicionando a Lista 4 incompleta

--- a/index.html
+++ b/index.html
@@ -190,6 +190,61 @@
                 </a>
             </li>
         </ul>
+
+        <h2>Lista 4</h2>
+
+        <ul>
+            <li>
+                <a href="./Lista4/1.html">
+                    Exercício 1
+                </a>
+            </li>
+            <li>
+                <a href="./Lista4/2.html">
+                    Exercício 2
+                </a>
+            </li>
+            <li>
+                <a href="./Lista4/3.html">
+                    Exercício 3
+                </a>
+            </li>
+            <li>
+                <a href="./Lista4/4.html">
+                    Exercício 4
+                </a> 
+            </li>
+            <li>
+                <a href="./Lista4/5.html">
+                    Exercício 5
+                </a>
+            </li>
+            <li>
+                <a href="./Lista4/6.html">
+                    Exercício 6
+                </a>
+            </li>
+            <li>
+                <a href="./Lista4/7.html">
+                    Exercício 7
+                </a>
+            </li>
+            <li>
+                <a href="./Lista4/8.html">
+                    Exercício 8
+                </a>
+            </li>
+            <li>
+                <a href="./Lista4/9.html">
+                    Exercício 9
+                </a>
+            </li>
+            <li>
+                <a href="./Lista4/10.html">
+                    Exercício 10
+                </a>
+            </li>
+        </ul>
     </body>
 
 </html>
